# AndresAI-Agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  config.py  docker-compose.prod.yml  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
alembic/versions/: b5cc45331ddc_initial_migration.py
compose/prod/: Caddyfile
frontend/src/css/: chat-app.css
frontend/src/js/: utils.js
frontend/src/ts/: chat-app.ts  utils.ts
modules/admin/: agent.py  auth.py  knowledge_base.py  messages.py  user.py  utils.py
modules/agent/: agent.py
modules/chats/: models.py  routers.py  services.py
modules/chats/utils/: geo.py
modules/knowledge_base/: models.py
modules/users/: models.py  services.py
modules/utils/: geo.py  request.py
scripts/: populate_user_geo_data.py
src/: chat-app.ts  chat_app.ts
static/: bootstrap.min.css  chat_app.css  typescript.min.js
static/css/: chat-app.css  chat_app.css
templates/: 404.html  chat_app.html
utils/: auth.py
